fix: alignment of character inside the avatar circle

--- a/src/components/avatar/avatar.css
+++ b/src/components/avatar/avatar.css
@@ -1,4 +1,6 @@
 .avatar{
+    text-align: center;
+    text-transform: lowercase;
     min-width: 50px;
     width: 50px;
     height: 50px;
